[gd_scene load_steps=13 format=3 uid="uid://d32i7ivu474tf"]

[ext_resource type="Script" uid="uid://o3ifrgc5tqyb" path="res://script/player.gd" id="1_rv870"]
[ext_resource type="SpriteFrames" uid="uid://6riq0kr8uxmd" path="res://sprites/frames/sw_spriteframes.tres" id="2_7twa1"]
[ext_resource type="Texture2D" uid="uid://e7uqg0xu6hjr" path="res://sprites/attack.png" id="4_knoa1"]
[ext_resource type="Texture2D" uid="uid://qowo5j5t5lqj" path="res://sprites/attack_skill_lv1.png" id="6_q1haa"]
[ext_resource type="Texture2D" uid="uid://drejh3dk2ugu3" path="res://sprites/attack_skill_lv2.png" id="8_qpm1p"]
[ext_resource type="Script" uid="uid://luufjqfq62sk" path="res://script/near_attack.gd" id="18_r3dvn"]
[ext_resource type="Script" uid="uid://0q8qoe4husbb" path="res://script/near_attack_lv_1.gd" id="19_nvvsh"]
[ext_resource type="Script" uid="uid://bexr323pu3p8b" path="res://script/near_attack_lv_2.gd" id="20_xjxgx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_48og4"]
radius = 58.0
height = 190.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqu4d"]
size = Vector2(70, 50)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nvvsh"]
radius = 37.0
height = 194.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvvsh"]
size = Vector2(159, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjxgx"]
size = Vector2(359, 194)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(5, -10)
collision_mask = 58
script = ExtResource("1_rv870")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, 9)
scale = Vector2(0.1, 0.1)
sprite_frames = ExtResource("2_7twa1")
animation = &"attack"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 9)
scale = Vector2(0.1, 0.1)
shape = SubResource("CapsuleShape2D_48og4")

[node name="ObjectCollision" type="CollisionShape2D" parent="."]
position = Vector2(-5, 16)
scale = Vector2(0.1, 0.03)
shape = SubResource("RectangleShape2D_gqu4d")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="attackeparent" type="Node2D" parent="."]

[node name="nearAttack" type="Area2D" parent="attackeparent"]
position = Vector2(221, 79)
script = ExtResource("18_r3dvn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackeparent/nearAttack"]
position = Vector2(-216.359, -73)
scale = Vector2(0.1, 0.1)
shape = SubResource("CapsuleShape2D_nvvsh")

[node name="Sprite2D" type="Sprite2D" parent="attackeparent/nearAttack"]
position = Vector2(-198.359, -83)
scale = Vector2(0.144531, 0.375)
texture = ExtResource("4_knoa1")
centered = false
offset = Vector2(-150, 0)

[node name="nearAttackLv1" type="Area2D" parent="attackeparent"]
script = ExtResource("19_nvvsh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackeparent/nearAttackLv1"]
position = Vector2(8, 9)
scale = Vector2(0.1, 0.1)
shape = SubResource("RectangleShape2D_nvvsh")

[node name="Sprite2D" type="Sprite2D" parent="attackeparent/nearAttackLv1"]
position = Vector2(-3, -4)
scale = Vector2(0.250641, 0.40625)
texture = ExtResource("6_q1haa")
centered = false
offset = Vector2(10, 0)

[node name="nearAttackLv2" type="Area2D" parent="attackeparent"]
script = ExtResource("20_xjxgx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackeparent/nearAttackLv2"]
position = Vector2(18, 9)
scale = Vector2(0.1, 0.1)
shape = SubResource("RectangleShape2D_xjxgx")

[node name="Sprite2D" type="Sprite2D" parent="attackeparent/nearAttackLv2"]
position = Vector2(-4.3125, 0)
scale = Vector2(0.53125, 0.296875)
texture = ExtResource("8_qpm1p")
centered = false
offset = Vector2(10, 0)

[node name="DashTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
